update pll byte

--- a/econt_sw/zmq_i2c/reg_maps/ECON_I2C_params_regmap.yaml
+++ b/econt_sw/zmq_i2c/reg_maps/ECON_I2C_params_regmap.yaml
@@ -688,6 +688,7 @@ ECON-T:
      params:
       ref_clk_sel:
        param_mask: 0x01
+       param_shift: 15
       output_clk_sel:
        param_mask: 0x03
        param_shift: 12
