--- a/econt_sw/configs/init.yaml
+++ b/econt_sw/configs/init.yaml
@@ -1,117 +1,74 @@
-i2c:
- emulator_addr: 1
-daq:
- input_file: /home/HGCAL_dev/src/econt_sw/econt_sw/data/EPORTRX_data_wafer.csv
- elinks_out:
-  - { name : 'link0', polarity: 1, idcode: 0 }
-  - { name : 'link1', polarity: 1, idcode: 1 }
-  - { name : 'link2', polarity: 1, idcode: 2 }
-  - { name : 'link3', polarity: 1, idcode: 3 }
-  - { name : 'link4', polarity: 1, idcode: 4 }
-  - { name : 'link5', polarity: 1, idcode: 5 }
-  - { name : 'link6', polarity: 1, idcode: 6 }
-  - { name : 'link7', polarity: 1, idcode: 7 }
-  - { name : 'link8', polarity: 1, idcode: 8 }
-  - { name : 'link9', polarity: 1, idcode: 9 }
-  - { name : 'link10', polarity: 1, idcode: 10 }
-  - { name : 'link11', polarity: 1, idcode: 11 }
-  - { name : 'link12', polarity: 1, idcode: 12 }
- zmq_push_port: '8888'
- delay_scan_port: '8888'
- verbose: 1
-global:
- data_push_port: '8888'
- serverIP: localhost
- output_directory: data
 ECON-T:
  RW:
-  CH_ALIGNER_*INPUT_ALL:
+  MISC_ALL:
    registers:
-    config:
+    misc_rw_0:
      params:
-      per_ch_align_en:
-       param_value: 1
-       
-  ALIGNER_ALL:
-   registers:
-    config:
-     snapshot_en:
-      param_value: 1
-     snapshot_arm:
-      param_value: 1
-    match_pattern_val:
-     value: 0x9cccccccaccccccc
-    match_mask_val:
-     value: 0x0000000000000000
-    orbsyn_cnt_max_val:
-     value: 3563
-    orbsyn_cnt_load_val:
-     value: 1
-    orbsyn_cnt_snapshot:
-     value: 5
-
-  FMTBUF_ALL:
-   registers:
-    tx_sync_word:
-     value: 0b00100100010
-    buff_t1:
-     value: 338 # default for eRx = 13
-    buff_t2:
-     value: 314 # default for eRx = 13
-    buff_t3:  
-     value: 25 # default for eRx = 13
-    config:
-     params:
-      eporttx_numen:
-       # Number of output ports enabled
-       param_value: 13
-      use_sum:
-       param_value: 0
-      stc_type:
-       param_value: 0
-
-  MFC_MUX_SELECT:
-   registers:
-    mux_select_*:
-     value: [ 7,  4,   5,  6,  3,  1,  0,  2,
-              8,  9,  10, 11, 14, 13, 12, 15,
-              23, 20, 21, 22, 19, 17, 16, 18,
-              25, 24, 26, 27, 30, 31, 28, 29,
-              38, 37, 39, 46, 36, 34, 33, 35,
-              40, 32, 41, 42, 47, 45, 43, 44]
-
-  MFC_CAL_VAL:
-   registers:
-    cal_*:
-     value: [348, 347, 335, 336, 347, 348, 335, 335,
-             323, 323, 311, 311, 325, 324, 312, 314, 
-             307, 293, 304, 318, 280, 267, 279, 291,
-             303, 290, 302, 315, 329, 316, 328, 340,
-             263, 276, 274, 261, 289, 302, 300, 287,
-             286, 299, 298, 286, 261, 274, 274, 262]             
-
-  MFC_ALGORITHM_SEL_DENSITY:
-   registers:
-    algo:
-     params:
-      select:
-       # 0: threshold sum, 1: Super Trigger Cell, 2: Best Choice (disabled), 3: repeater, 4: Autoencoder (Disabled)   
-       param_value: 0
-      density:
-       # 1: high density
+      run:
        param_value: 1
 
-  ALGO_THRESHOLD_VAL:
+  FCTRL_ALL:
    registers:
-    threshold_val_*:
-     value: [47, 47, 47, 47, 47, 47, 47, 47,
-             47, 47, 47, 47, 47, 47, 47, 47,
-             47, 47, 47, 47, 47, 47, 47, 47,
-             47, 47, 47, 47, 47, 47, 47, 47,
-             47, 47, 47, 47, 47, 47, 47, 47,
-             47, 47, 47, 47, 47, 47, 47, 47]
+    config:
+     params:
+      invert_command_rx:
+       param_value: 0
+      EdgeSel_T1:
+       param_value: 0
+  
+  PLL_ALL:
+   registers:
+    pll_bytes_26to25:
+     params:
+      output_clk_sel:
+       param_value: 0
+      ref_clk_sel:
+       param_value: 1
+    pll_bytes_17to13:
+     params:
+      VCObypass:
+       param_value: 0
+    pll_bytes_21to18:
+     params:
+      fromMemToLJCDR_lfEnable:
+       param_value: 0
 
-  ALGO_DROPLSB:
+ RO:
+  FCTRL_ALL:
    registers:
-    drop_lsb:
-     value: 3
+    status: 
+     params:
+      locked:
+       param_value: 0
+      fc_error:
+       param_value: 0
+      command_rx_inverted:
+       param_value: 0
+  
+  PLL_ALL:
+   registers:
+    pll_read_bytes_2to0:
+     params:
+      lfState:
+       param_value: 0
+      lfLocked:
+       param_value: 0
+      lfInstLock:
+       param_value: 0
+      lfLossOfLockCount:
+       param_value: 0
+      smState: 
+       param_value: 0
+      smLocked:
+       param_value: 0
+    pll_read_bytes_4to3:
+     params:
+      pll_not_locked_timeout:
+       param_value: 0
+
+  MISC_ALL:
+   registers:
+    misc_ro_0:
+     params:
+      PUSM_state:
+       param_value: 0
