--- a/econt_sw/zmq_i2c/reg_maps/ECON_I2C_params_regmap.yaml
+++ b/econt_sw/zmq_i2c/reg_maps/ECON_I2C_params_regmap.yaml
@@ -442,7 +442,7 @@ ECON-T:
      size_byte: 2
      addr_shift: 2
      n_iterations: 13
-     value: [0x0606, 0x0606, 0x0606, 0x0606, 0x0606, 0x0606,
+     value: [0x0606, 0x0606, 0x0606, 0x0606, 0x0606, 0x0606, 0x0606,
              0x0606, 0x0606, 0x0606, 0x0606, 0x0606, 0x0606]
      params:
       pre_emphasis_strength:
